--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "start2": "nodemon server.js"
-  },
+},
   "dependencies": {
     "express": "*",
     "@vitalets/google-translate-api": "*",
@@ -24,6 +24,7 @@
     "formdata-node": "*",
     "fs-extra": "^11.2.0",
     "canvas": "*",
+    "canvafy": "^7.2.1",
     "google-it": "^1.6.4",
     "got": "*",
     "google-translate-api-x": "*",
@@ -37,7 +38,6 @@
     "tough-cookie": "*",
     "util": "*",
     "yt-search": "^2.10.3",
-    "tough-cookie": "*",
     "moment-timezone": "*"
-  }
+}
 }
