--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "fs-extra": "^11.2.0",
     "canvas": "*",
     "canvafy": "^7.2.1",
+    "arabic-reshaper": "^1.0.4",
+    "bidi-js": "^1.0.6",
     "google-it": "^1.6.4",
     "got": "*",
     "google-translate-api-x": "*",
