--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "start2": "nodemon server.js"
-},
+  },
   "dependencies": {
     "express": "*",
     "@vitalets/google-translate-api": "*",
@@ -39,6 +39,9 @@
     "util": "*",
     "yt-search": "^2.10.3",
     "moment-timezone": "*",
-    "unzipper": "^0.10.11"
-}
+    "unzipper": "^0.10.11",
+    "@whiskeysockets/baileys": "^6.4.0",
+    "awesome-phonenumber": "^4.4.0",
+    "pino": "^8.15.0"
+  }
 }
